infra/candyscan/webapp/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: candyscan-web
  labels:
    name: candyscan-web
    app: CANdyScan
    app.kubernetes.io/part-of: CANdyScan
    role: web
    env: prod
spec:
  replicas: 1
  selector:
    matchLabels:
      name: candyscan-web
  template:
    metadata:
      labels:
        name: candyscan-web
        app: CANdyScan
        app.kubernetes.io/part-of: CANdyScan
        role: web
        env: prod
    spec:
      containers:
        - name: candyscan-web
          image: image-registry.openshift-image-registry.svc:5000/ca7f8f-tools/indyscan-webapp:4.6.2
          ports:
            - containerPort: 3707
