infra/candyscan/webapp/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: candyscan-web
  labels:
    name: candyscan-web
    app: CANdyScan
    app.kubernetes.io/part-of: CANdyScan
    role: web
    env: prod
  annotations:
    kubernetes.io/ingress.class: openshift-default
spec:
  ingressClassName: openshift-default
  tls:
    - hosts:
        - candyscan.digitaltrust.gov.bc.ca
      secretName: candyscan-tls
  rules:
    - host: candyscan.digitaltrust.gov.bc.ca
      http:
        paths:
          - path: /
            pathType: ImplementationSpecific
            backend:
              service:
                name: candyscan-web
                port:
                  number: 443
